k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-gitops
  namespace: hello-gitops
spec:
  type: NodePort
  selector:
    app: hello-gitops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8050
